# magicqoi

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
benchmark/: CMakeLists.txt  decode_benchmark.cpp  decode_set_benchmark.cpp  encode_set_benchmark.cpp  mgqoi_baseline.c  mgqoi_baseline.h
common/: CMakeLists.txt  common.c
examples/: CMakeLists.txt  mgqoi-decode.cpp  mgqoi-encode.cpp
magicqoi/: magicqoi.c  magicqoi.h  magicqoi.hpp
tests/: CMakeLists.txt  unittest.cpp
