find_package(benchmark REQUIRED)

add_executable(decode_benchmark decode_benchmark.cpp mgqoi_baseline.c)
target_link_libraries(decode_benchmark PRIVATE benchmark::benchmark magicqoi magicqoi_common)

add_executable(decode_set_benchmark decode_set_benchmark.cpp)
target_link_libraries(decode_set_benchmark PRIVATE magicqoi magicqoi_common)

add_executable(encode_set_benchmark encode_set_benchmark.cpp)
target_link_libraries(encode_set_benchmark PRIVATE magicqoi magicqoi_common)